// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todolist Should be render todolist 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="todoList"
      >
        <h2
          class="title"
        >
          Todos
        </h2>
        <div
          class="addItem"
        >
          <span
            class="inputWrapper"
          >
            <input
              class="input input  fullwidth"
              placeholder="Enter title"
              type="text"
              value=""
            />
          </span>
          <button
            class="button button"
          >
            +
          </button>
        </div>
        <div
          class="group"
        >
          <button
            class="button active"
          >
            all
          </button>
          <button
            class="button "
          >
            active
          </button>
          <button
            class="button "
          >
            completed
          </button>
          <button
            class="button undefined"
          >
            Clear
          </button>
        </div>
        <p
          class="itemsLeft"
        >
          3
           items left
        </p>
        <ul>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                React
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                Html
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                Css
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task checked"
              >
                <input
                  checked=""
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span checked"
              >
                JS
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="todoList"
    >
      <h2
        class="title"
      >
        Todos
      </h2>
      <div
        class="addItem"
      >
        <span
          class="inputWrapper"
        >
          <input
            class="input input  fullwidth"
            placeholder="Enter title"
            type="text"
            value=""
          />
        </span>
        <button
          class="button button"
        >
          +
        </button>
      </div>
      <div
        class="group"
      >
        <button
          class="button active"
        >
          all
        </button>
        <button
          class="button "
        >
          active
        </button>
        <button
          class="button "
        >
          completed
        </button>
        <button
          class="button undefined"
        >
          Clear
        </button>
      </div>
      <p
        class="itemsLeft"
      >
        3
         items left
      </p>
      <ul>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              React
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              Html
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              Css
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task checked"
            >
              <input
                checked=""
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span checked"
            >
              JS
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Todolist Should create todolist with empty 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="todoList"
      >
        <h2
          class="title"
        >
          Todos
        </h2>
        <div
          class="addItem"
        >
          <span
            class="inputWrapper"
          >
            <input
              class="input input  fullwidth"
              placeholder="Enter title"
              type="text"
              value=""
            />
          </span>
          <button
            class="button button"
          >
            +
          </button>
        </div>
        <div
          class="group"
        >
          <button
            class="button active"
          >
            all
          </button>
          <button
            class="button "
          >
            active
          </button>
          <button
            class="button "
          >
            completed
          </button>
          <button
            class="button undefined"
          >
            Clear
          </button>
        </div>
        <p
          class="itemsLeft"
        >
          3
           items left
        </p>
        <ul>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                React
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                Html
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                Css
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task checked"
              >
                <input
                  checked=""
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span checked"
              >
                JS
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="todoList"
    >
      <h2
        class="title"
      >
        Todos
      </h2>
      <div
        class="addItem"
      >
        <span
          class="inputWrapper"
        >
          <input
            class="input input  fullwidth"
            placeholder="Enter title"
            type="text"
            value=""
          />
        </span>
        <button
          class="button button"
        >
          +
        </button>
      </div>
      <div
        class="group"
      >
        <button
          class="button active"
        >
          all
        </button>
        <button
          class="button "
        >
          active
        </button>
        <button
          class="button "
        >
          completed
        </button>
        <button
          class="button undefined"
        >
          Clear
        </button>
      </div>
      <p
        class="itemsLeft"
      >
        3
         items left
      </p>
      <ul>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              React
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              Html
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              Css
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task checked"
            >
              <input
                checked=""
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span checked"
            >
              JS
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Todolist Should create todolist with empty todos 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="todoList"
      >
        <h2
          class="title"
        >
          Todos
        </h2>
        <div
          class="addItem"
        >
          <span
            class="inputWrapper"
          >
            <input
              class="input input  fullwidth"
              placeholder="Enter title"
              type="text"
              value=""
            />
          </span>
          <button
            class="button button"
          >
            +
          </button>
        </div>
        <div
          class="group"
        >
          <button
            class="button active"
          >
            all
          </button>
          <button
            class="button "
          >
            active
          </button>
          <button
            class="button "
          >
            completed
          </button>
          <button
            class="button undefined"
          >
            Clear
          </button>
        </div>
        <p
          class="itemsLeft"
        >
          all done
        </p>
        <ul>
          <h3
            class="empty"
          >
            List empty...
          </h3>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="todoList"
    >
      <h2
        class="title"
      >
        Todos
      </h2>
      <div
        class="addItem"
      >
        <span
          class="inputWrapper"
        >
          <input
            class="input input  fullwidth"
            placeholder="Enter title"
            type="text"
            value=""
          />
        </span>
        <button
          class="button button"
        >
          +
        </button>
      </div>
      <div
        class="group"
      >
        <button
          class="button active"
        >
          all
        </button>
        <button
          class="button "
        >
          active
        </button>
        <button
          class="button "
        >
          completed
        </button>
        <button
          class="button undefined"
        >
          Clear
        </button>
      </div>
      <p
        class="itemsLeft"
      >
        all done
      </p>
      <ul>
        <h3
          class="empty"
        >
          List empty...
        </h3>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Todolist Should create todolist with filter active 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="todoList"
      >
        <h2
          class="title"
        >
          Todos
        </h2>
        <div
          class="addItem"
        >
          <span
            class="inputWrapper"
          >
            <input
              class="input input  fullwidth"
              placeholder="Enter title"
              type="text"
              value=""
            />
          </span>
          <button
            class="button button"
          >
            +
          </button>
        </div>
        <div
          class="group"
        >
          <button
            class="button active"
          >
            all
          </button>
          <button
            class="button "
          >
            active
          </button>
          <button
            class="button "
          >
            completed
          </button>
          <button
            class="button undefined"
          >
            Clear
          </button>
        </div>
        <p
          class="itemsLeft"
        >
          3
           items left
        </p>
        <ul>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                React
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                Html
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task "
              >
                <input
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span "
              >
                Css
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="todoList"
    >
      <h2
        class="title"
      >
        Todos
      </h2>
      <div
        class="addItem"
      >
        <span
          class="inputWrapper"
        >
          <input
            class="input input  fullwidth"
            placeholder="Enter title"
            type="text"
            value=""
          />
        </span>
        <button
          class="button button"
        >
          +
        </button>
      </div>
      <div
        class="group"
      >
        <button
          class="button active"
        >
          all
        </button>
        <button
          class="button "
        >
          active
        </button>
        <button
          class="button "
        >
          completed
        </button>
        <button
          class="button undefined"
        >
          Clear
        </button>
      </div>
      <p
        class="itemsLeft"
      >
        3
         items left
      </p>
      <ul>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              React
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              Html
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task "
            >
              <input
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span "
            >
              Css
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Todolist Should create todolist with filter completed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="todoList"
      >
        <h2
          class="title"
        >
          Todos
        </h2>
        <div
          class="addItem"
        >
          <span
            class="inputWrapper"
          >
            <input
              class="input input  fullwidth"
              placeholder="Enter title"
              type="text"
              value=""
            />
          </span>
          <button
            class="button button"
          >
            +
          </button>
        </div>
        <div
          class="group"
        >
          <button
            class="button active"
          >
            all
          </button>
          <button
            class="button "
          >
            active
          </button>
          <button
            class="button "
          >
            completed
          </button>
          <button
            class="button undefined"
          >
            Clear
          </button>
        </div>
        <p
          class="itemsLeft"
        >
          3
           items left
        </p>
        <ul>
          <li
            class="taskWrapper"
          >
            <div
              class="taskItem"
            >
              <label
                class="task checked"
              >
                <input
                  checked=""
                  class="checkbox"
                  type="checkbox"
                />
                <span
                  class="customCheckbox"
                />
              </label>
              <span
                class="span checked"
              >
                JS
              </span>
            </div>
            <button
              class="button undefined"
            >
              x
            </button>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="todoList"
    >
      <h2
        class="title"
      >
        Todos
      </h2>
      <div
        class="addItem"
      >
        <span
          class="inputWrapper"
        >
          <input
            class="input input  fullwidth"
            placeholder="Enter title"
            type="text"
            value=""
          />
        </span>
        <button
          class="button button"
        >
          +
        </button>
      </div>
      <div
        class="group"
      >
        <button
          class="button active"
        >
          all
        </button>
        <button
          class="button "
        >
          active
        </button>
        <button
          class="button "
        >
          completed
        </button>
        <button
          class="button undefined"
        >
          Clear
        </button>
      </div>
      <p
        class="itemsLeft"
      >
        3
         items left
      </p>
      <ul>
        <li
          class="taskWrapper"
        >
          <div
            class="taskItem"
          >
            <label
              class="task checked"
            >
              <input
                checked=""
                class="checkbox"
                type="checkbox"
              />
              <span
                class="customCheckbox"
              />
            </label>
            <span
              class="span checked"
            >
              JS
            </span>
          </div>
          <button
            class="button undefined"
          >
            x
          </button>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
